aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.5/using_content_navigator/devtools-setup-registry-redhat-io_installing-devtools.md
# 2. Installing Ansible development tools
## 2.1. Requirements
### 2.1.2. Authenticating with the Red Hat container registry




All container images available through the Red Hat container catalog are hosted on an image registry, `registry.redhat.io` . The registry requires authentication for access to images.

To use the `registry.redhat.io` registry, you must have a Red Hat login. This is the same account that you use to log in to the Red Hat Customer Portal (access.redhat.com) and manage your Red Hat subscriptions.

Note
If you are planning to install the Ansible development tools on a container inside VS Code, you must log in to `registry.redhat.io` before launching VS Code so that VS Code can pull the `devtools` container from `registry.redhat.io` .

If you are running Ansible development tools on a container inside VS Code and you want to pull execution environments or the `devcontainer` to use as an execution environment, you must log in from a terminal prompt within the `devcontainer` from a terminal inside VS Code.



You can use the `podman login` or `docker login` commands with your credentials to access content on the registry.

For more information about Red Hat container registry authentication, see [Red Hat Container Registry Authentication](https://access.redhat.com/RegistryAuthentication) on the Red Hat customer portal.

